feature/add-sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* @import 'react-pro-sidebar/dist/css/styles.css'; */
+/* @import '~@fortawesome/fontawesome-free/css/all.min.css'; */
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -26,8 +29,8 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  /* min-width: 320px; */
+  /* min-height: 100vh; */
 }
 
 h1 {
