--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* @import 'react-pro-sidebar/dist/css/styles.css'; */
 /* @import '~@fortawesome/fontawesome-free/css/all.min.css'; */
-
+/* 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -29,8 +33,6 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  /* min-width: 320px; */
-  /* min-height: 100vh; */
 }
 
 h1 {
@@ -68,4 +70,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
